[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/features/vr_tracking_test.gd" id="1_tracking_script"]

[sub_resource type="BoxMesh" id="BoxMesh_left_hand"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_left"]
albedo_color = Color(1, 0, 0, 1)
metallic = 0.3
roughness = 0.7

[sub_resource type="BoxMesh" id="BoxMesh_right_hand"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_right"]
albedo_color = Color(0, 0, 1, 1)
metallic = 0.3
roughness = 0.7

[node name="VRTrackingTest" type="Node3D"]
script = ExtResource("1_tracking_script")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
current = true

[node name="FallbackCamera" type="Camera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 5)
current = false

[node name="LeftController" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"
pose = &"aim"

[node name="LeftHandMesh" type="MeshInstance3D" parent="XROrigin3D/LeftController"]
mesh = SubResource("BoxMesh_left_hand")
surface_material_override/0 = SubResource("StandardMaterial3D_left")

[node name="RightController" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
pose = &"aim"

[node name="RightHandMesh" type="MeshInstance3D" parent="XROrigin3D/RightController"]
mesh = SubResource("BoxMesh_right_hand")
surface_material_override/0 = SubResource("StandardMaterial3D_right")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 5, 0)
light_energy = 1.0
shadow_enabled = true

[node name="Ground" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(10, 1, 10)

[node name="ReferenceBox" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3)
size = Vector3(0.5, 0.5, 0.5)
